--- a/U3_情报搜集.md
+++ b/U3_情报搜集.md
@@ -28,3 +28,22 @@
     模块：scanner/ip/ipidseq
 
 ## 针对性扫描
+### 1.服务器消息块协议扫描
+
+	smb_version模块 ###用于获取操作系统版本
+### 2.搜索配置不当的MS SQL
+
+	mssql_ping模块
+    
+### 3.SSH服务器扫描
+
+	ssh_version模块  ###攻击某个特定版本OpenSSH good
+    
+### 4.FTP扫描 
+
+	ftp_version模块  
+    ftp/anoymous模块 ###if允许匿名
+    
+### 5.SNMP协议扫描
+
+	snmp_login模块 ###SNMP团体字符串 good
